gac.log
nohup: ignoring input
Traceback (most recent call last):
  File "/home/peng/anaconda3/envs/spinningup/lib/python3.6/runpy.py", line 183, in _run_module_as_main
    mod_name, mod_spec, code = _get_module_details(mod_name, _Error)
  File "/home/peng/anaconda3/envs/spinningup/lib/python3.6/runpy.py", line 109, in _get_module_details
    __import__(pkg_name)
  File "/home/peng/Documents/spinningup/spinup/__init__.py", line 22, in <module>
    from spinup.algos.pytorch.shpo.shpo import shpo as shpo_pytorch
  File "/home/peng/Documents/spinningup/spinup/algos/pytorch/shpo/shpo.py", line 234
    invHg = core.cg(get_Hx, loss_grad, self.cg_iters)
        ^
IndentationError: expected an indented block
